@@ -2,6 +2,7 @@
 ===============
 
 - Add uninstall target for libs.
+- Don't try to write packet whilst in a callback.
 
 0.14.1 - 20111117
 =================
